--- a/src/Components/Orderbook/orderbook.scss
+++ b/src/Components/Orderbook/orderbook.scss
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 200px;
     margin-left: 10px;
+    font-size: 12px;
     border: 1px solid black;
     h1 {
         font-size: 20px;
